--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "font_tester",
-  "homepage": "https://github.com/lucy-giang3/font-tester/",
+  "homepage": "https://lucy-giang3.github.io/font-tester/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
